Add purpose property to /requests endpoint
