# doc/openapi.yaml
@@ -703,7 +703,7 @@ components:
     Request:
       type: object
       additionalProperties: false
-      required: [id, url, created_at, db, status, validity, validation_reports, submission]
+      required: [id, url, created_at, purpose, db, status, validity, validation_reports, submission]
 
       properties:
         id:
@@ -716,6 +716,13 @@ components:
         created_at:
           type: string
           format: date-time
+
+        purpose:
+          type: string
+
+          enum:
+            - validate
+            - submit
 
         db:
           type: string
